@@ -1,7 +1,7 @@
 /***************************************************************************
  *          GModelSpatial.hpp - Spatial model abstract base class          *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2009-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2009-2018 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -107,6 +107,7 @@ public:
     GModelPar&       at(const int& index);
     const GModelPar& at(const int& index) const;
     bool             has_par(const std::string& name) const;
+    bool             has_free_pars(void) const;
     int              size(void) const;
     void             autoscale(void);
 
